tests/ui/associated-inherent-types/candidate-with-alias-2.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/candidate-with-alias-2.rs:23:23
   |
LL |     field: <Foo<u8>>::Inherent,
   |                       ^^^^^^^^ multiple `Inherent` found
   |
note: candidate #1 is defined in an impl for the type `Foo<<u8 as Identity>::Assoc>`
  --> $DIR/candidate-with-alias-2.rs:16:5
   |
LL |     type Inherent = u8;
   |     ^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `Foo<<u16 as Identity>::Assoc>`
  --> $DIR/candidate-with-alias-2.rs:19:5
   |
LL |     type Inherent = u32;
   |     ^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
